==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

 - Provide comprehensive error message when using  ``NULL`` literal in
    ``GROUP BY``.

 - Allow ``DISTINCT`` to operate on literals. E.g.::

     SELECT DISTINCT ['val1', 'val2'], col1, col2, ... FROM t

 - Allow ``GROUP BY`` on any literal. E.g.::

     SELECT {a=1, b=2}, COUNT(*) FROM t GROUP BY 1

 - Fixed an issue that can hang the nodes when running an insert from query
   statement for a large dataset when the target table is an empty
   partitioned table.

 - Fixed an issue that prevents CrateDB from bootstrap on Windows hosts.

 - Fixed a race condition which could cause ``UPDATE`` or ``DELETE`` statements
   to get stuck.

 - Fixed a ClassCastException that could occur on certain queries if connected
   via the postgres protocol.

 - Fixed an issue that could cause the ``_score >= <minScore>`` filter to not
   work correctly if used in a query with an ``ORDER BY`` clause.